# holecard

./: .gh-hooks.sh  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  LICENSE-APACHE  LICENSE-MIT  README.md  release-please-config.json  test-server.js
.githooks/: pre-push
.github/workflows/: ci.yml  publish-crates.yml  release-please.yml  release.yml
.vibing/: .moteignore
.vibing/chat/: chat-20260126-115104-0001af20e78dcbd7-1b1f.vibing
.vibing/mote/49b84458-46a5-4c1c-920f-35c76eff179d/: index
.vibing/mote/49b84458-46a5-4c1c-920f-35c76eff179d/patches/: 20260126_122252.patch  20260126_123002.patch
.vibing/mote/49b84458-46a5-4c1c-920f-35c76eff179d/snapshots/: 20260126_025511_6eea735f.json  20260126_032405_0c3481b2.json  20260126_040545_0d1e8464.json
docs/: MULTI_VAULT.md  RAYCAST.md  README.md  SECURITY.md  SSH.md
homebrew/: README.md  hc.rb.template
raycast/: package.json  pnpm-lock.yaml  raycast-env.d.ts  tsconfig.json
raycast/scripts/: build.sh
raycast/src/: card-list.tsx  clip-card.tsx  clip-totp.tsx  manage-hand.tsx
raycast/src/components/: locked-view.tsx
raycast/src/utils/: hc.ts
src/: config.rs  context.rs  deck_context.rs  main.rs  multi_deck_context.rs  multi_vault_context.rs
src/cli/: commands.rs  input.rs  mod.rs
src/domain/: crypto.rs  deck.rs  entry.rs  error.rs  hand.rs  mod.rs  password_gen.rs  provider.rs  secret_resolver.rs  ssh_key.rs  template.rs  totp.rs  uri.rs  vault.rs
src/domain/providers/: cloudflare.rs  github.rs  mod.rs
src/handlers/: completion.rs  config.rs  deal.rs  deck.rs  deck_management.rs  inject.rs  mod.rs  password.rs  provider.rs  read.rs  run.rs  session.rs  ssh.rs  template.rs  totp.rs  transfer.rs  vault.rs  vault_management.rs
src/infrastructure/: biometric.rs  crypto_impl.rs  deck_registry.rs  keychain_macos.rs  keyring.rs  mod.rs  provider_storage.rs  session.rs  ssh_agent.rs  storage.rs  swift_runner.rs  vault_registry.rs
