[package]
name = "holecard-cli"
version = "0.2.6"
edition = "2021"
authors = ["shabarba"]
description = "A secure CLI password manager with dual-key encryption and TOTP support"
readme = "README.md"
homepage = "https://github.com/shabarba/holecard"
repository = "https://github.com/shabarba/holecard"
license = "MIT OR Apache-2.0"
keywords = ["password-manager", "cli", "security", "encryption", "totp"]
categories = ["command-line-utilities", "cryptography"]
exclude = [".github/", ".vibing/", "*.md"]

[[bin]]
name = "hc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
keyring = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
copypasta = "0.10"
dialoguer = "0.11"
base32 = "0.4"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
totp-lite = "2.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sodiumoxide = "0.2"
sha2 = "0.10"
tempfile = "3.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/hc-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/hc-aarch64-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/hc-x86_64-unknown-linux-gnu.tar.gz"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
